use ellipsis & fix alignment in both list form & view form page

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,7 +1,9 @@
 
 .form-item .title-row > .list-group-item-heading {
 	color: #34628a;
-	word-wrap:break-word;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .form-item:hover .title-row > .list-group-item-heading {
