--- a/public/modules/forms/base/css/form.css
+++ b/public/modules/forms/base/css/form.css
@@ -340,6 +340,12 @@ div.config-form .row.field {
         margin-bottom: 0;
         margin-top: 0;
     }
+    .admin-form > .page-header h1,
+    .admin-form > .page-header h2 {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
     .admin-form > .page-header > .col-xs-3 {
         padding-top: 1.4em;
     }
